cmake_minimum_required(VERSION 2.6)

SET(
	NAME
	Dijkstra
)

PROJECT( ${NAME} )


STRING( REPLACE "\\" "/" ROBOTINOAPI2_DIR "$ENV{ROBOTINOAPI2_DIR}" )


IF( NOT ROBOTINOAPI2_DIR )

	SET( ROBOTINOAPI2_DIR "/usr/local/robotino/api2" )

ENDIF( NOT ROBOTINOAPI2_DIR )

SET(
	CMAKE_MODULE_PATH
	${ROBOTINOAPI2_DIR}/cmake
)
SET(
  GLOBAL_TARGET_DIR
  ${CMAKE_CURRENT_BINARY_DIR}/target
)
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR} )
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR}/debug )
FILE( MAKE_DIRECTORY ${GLOBAL_TARGET_DIR}/release )

SET(
  LIBRARY_OUTPUT_PATH
  ${GLOBAL_TARGET_DIR}
)
    
SET(
  EXECUTABLE_OUTPUT_PATH
  ${GLOBAL_TARGET_DIR}
)

find_package( RobotinoAPI2 REQUIRED )

COPY_ROBOTINOAPI2_DLLS( "${GLOBAL_TARGET_DIR}/release" "${GLOBAL_TARGET_DIR}/debug" )

FILE( GLOB SRCS *.cpp )
FILE( GLOB HEADER *.h )

ADD_EXECUTABLE(
	${NAME}
	${SRCS}
	${HEADER}
)

TARGET_LINK_LIBRARIES(
	${NAME}
	${REC_ROBOTINO_API2_LIBRARY}
)

SOURCE_GROUP( "Source Files" FILES ${SRCS} ${HEADER} )
